--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -9,4 +9,5 @@
     <string name="network_toast">اه أوه! هذا التطبيق يتطلب اتصال بالإنترنت</string>
     <string name="symbol_search">رمز البحث</string>
     <string name="ok_button">حسنا</string>
+    <string name="existing_stock_err">يتم حفظ هذه الأسهم بالفعل!</string>
 </resources>
