--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="input_prefill" />
     <string name="network_toast">Uh-oh! This app requires an internet connection</string>
     <string name="ok_button">OK</string>
+    <string name="existing_stock_err">This stock is already saved!</string>
 </resources>
